<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_tvshow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/posterDesc"
            android:src="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="start"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_movie"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/tv_item_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_title"
            app:layout_constraintStart_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_year"
            app:layout_constraintStart_toStartOf="@+id/tv_item_year"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_year"
            tools:text="@string/genre" />


        <TextView
            android:id="@+id/tv_item_eps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_genre"
            app:layout_constraintStart_toStartOf="@+id/tv_item_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_genre"
            tools:text="@string/episode" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>