<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_movies"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/cons_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/posterDesc"
            android:src="@color/purple_700"/>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/title"
            android:layout_below="@+id/img_movie"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="?attr/colorOnSecondary"
            android:layout_below="@+id/tv_item_title"
            tools:text="@string/year" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/tv_release_date">

            <ImageView
                android:id="@+id/img_item_star"
                android:layout_width="19sp"
                android:layout_height="19sp"
                android:src="@drawable/ic_baseline_stars_24"/>

            <TextView
                android:id="@+id/tv_item_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="14sp"
                tools:text="@string/rate" />
        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>